# Jumo.rs

./: .gitignore  Cargo.toml  Dockerfile.build  README.md  TODO.md  build.sh  claude_input.json  cspell.json  docker-compose.yml
src/: app.rs  camera.rs  claude_types.rs  config.rs  embeddings.rs  emote.rs  env.rs  environment.rs  events.rs  features.rs  main.rs  recorder.rs  state.rs  text_processor.rs
src/audio/: mod.rs  player.rs  recorder.rs
src/database/: mod.rs  models.rs
src/database/models/: log.rs  message.rs  mod.rs
src/memory/: mod.rs  postgres.rs
src/memory/mongodb/: log_collection.rs  message_collection.rs  mod.rs
src/prompts/: emoting.rs  mod.rs  overview.rs  status.rs  system.rs  system_info.rs
src/renderer/: mod.rs
src/services/: anthropic.rs  elevenlabs.rs  mod.rs
src/services/anthropic/: mod.rs  types.rs
src/services/elevenlabs/: mod.rs  types.rs  voices.rs
src/services/openai/: mod.rs
src/services/qdrant/: mod.rs
src/tools/: clear_logs.rs  mod.rs  pass.rs  scroll_logs.rs  set_view.rs  tools.rs  update.rs
src/types/: logs.rs  message.rs  mod.rs
src/widgets/: app.rs  app_layout.rs  header.rs  logs.rs  main.rs  mod.rs  nav_tabs.rs  status_line.rs
src/widgets/layouts/: home.rs  logs.rs  mod.rs
src/widgets/views/: chat.rs  home.rs  logs.rs  mod.rs
src/widgets/views/home/: audio_bars.rs  mod.rs
