[package]
name = "robo_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
hound = "3.5.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
