[package]
name = "robo_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
colored = "3.0.0"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenv = "0.15.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = "0.3.31"
hound = "3.5.1"
image = "0.25.6"
indexmap = "2.10.0"
nokhwa = { version = "0.10.9", features = ["input-native"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["multipart", "json", "stream"] }
ringbuf = "0.4.8"
rusqlite = { version = "0.37.0", features = ["bundled"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-util = "0.7.15"
tui-input = "0.14.0"
tui-scrollview = "0.5.1"
uuid = { version = "1.17.0", features = ["v4"] }
